kubernetes/clusters/homelab/apps/whoami-tls/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-tls
  namespace: apps
  labels:
    app.kubernetes.io/name: whoami-tls
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: whoami-tls
  ports:
    - name: https
      port: 443
      targetPort: https
      appProtocol: https
