kubernetes/clusters/homelab/apps/whoami-tls/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-https
  namespace: apps
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-https
  addresses:
    - type: IPAddress
      value: 192.168.1.187
  listeners:
    - name: https
      hostname: whoami.home.arpa
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: whoami-home-arpa-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
