kubernetes/clusters/homelab/apps/whoami-tls/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-tls
  namespace: apps
spec:
  parentRefs:
    - name: internal-https
      sectionName: https
  hostnames:
    - whoami.home.arpa
  rules:
    - backendRefs:
        - name: whoami-tls
          port: 443
